fixed layout issue for when window is under 715px

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -11,6 +11,8 @@ html{
 
 body{
 	width:100%;
+	height: auto;
+	min-height: 100% !important;
 	font-family: 'Droid Sans', sans-serif;
 }
 
@@ -20,6 +22,9 @@ img{
 
 iframe{
     overflow:hidden;
+    @media screen and (max-width:715px){
+		width:100%;
+	}
 }
 
 header{
